Bug 95628 - Tooltip not updated on Spam Status when slecting next message
Summary: Tooltip not updated on Spam Status when slecting next message
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2004-12-22 12:29 UTC by Edwin Schepers
Modified: 2009-09-14 21:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Edwin Schepers 2004-12-22 12:29:35 UTC
Version:           1.7.91 (using KDE 3.3.90 (alpha1, CVS >= 20041206), compiled sources)
Compiler:          gcc version 3.3.2 20031022 (Red Hat Linux 3.3.2-1)
OS:                Linux (i686) release 2.4.22-1.2115.nptl

Hi,
I see this new feature "Spam Status" in the header of messages and see a tooltip when I onmouseover the rectangle picture.
But when I select a next message with my arrow-key, the tooltip of the previous message stays visible.
I think it's better to hide the tooltip when another message is selected. In this case, the tooltip of the current message should appear.

Regards,
Edwin
Comment 1 Martin Koller 2009-08-30 14:36:16 UTC
Still in 4.3; It's a KHTML bug and I'm trying to find the best solution ...
Comment 2 Martin Koller 2009-09-14 21:47:48 UTC
SVN commit 1023472 by mkoller:

BUG: 95628

Hide the current tooltip when showing a new page


 M  +4 -0      khtml_part.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1023472
Comment 3 Martin Koller 2009-09-14 21:48:43 UTC
SVN commit 1023473 by mkoller:

Backport r1023472 by mkoller from trunk to the 4.3 branch:

CCBUG: 95628

Hide the current tooltip when showing a new page



 M  +4 -0      khtml_part.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1023473