BUG: 95628

Hide the current tooltip when showing a new page

svn path=/trunk/KDE/kdelibs/; revision=1023472